--- a/journal/201901.md
+++ b/journal/201901.md
@@ -196,62 +196,54 @@ Open source and hacker oriented events like DEFCON, CCC and FOSDEM were discusse
 
 [blog.dcrclub.org](https://blog.dcrclub.org/) is a new website in Chinese that collects various articles and translations in one place. The source hosted [on GitHub](https://github.com/0x5826/blog.dcrclub.org) makes it easy to contribute or mirror the website on other domain for more resiliency. Credits to @TogT4V (Telegram) for starting the site.
 
-New [Arabic blog](https://decred-arabia.blogspot.com/2019/01/blog-post.html) about Decred started by @butterfly. There are some challenges with publishing arabic text on the web, help is welcome in #writers_room.
+New [Arabic blog](https://decred-arabia.blogspot.com/2019/01/blog-post.html) about Decred started by @butterfly (@arij on Matrix). There are some challenges with publishing arabic text on the web, advice is welcome in #writers_room.
 
 Portuguese podcasts [started](https://matrix.to/#/!kdpEDksmOMNrlMqffD:decred.org/$1548814257223928fVjiP:matrix.org) by @michae2xl, available on [Soundcloud](https://soundcloud.com/user-770106247/), Spotify, Apple Podcasts and Google Podcasts - search for "Decred Brasil".
 
-[@decredexplorer](https://twitter.com/decredexplorer) is a new Twitter account focused on dcrdata, thanks to @michae2xl for organizing it.
+[@decredexplorer](https://twitter.com/decredexplorer) is a new Twitter account focused on dcrdata, thanks to @michae2xl for organizing.
 
-@Matt D started [Decred Aggregator](https://t.me/DecredAgg) in Telegram that aims to collect news, press, videos, podcasts, Decred announcements, trending tweets and Reddit posts, as well as market stats. Introduction and motivation was shared in [this chat]( https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154825336714293nfWdU:decred.org).
+@Matt D [introduced](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154825336714293nfWdU:decred.org) [Decred Aggregator](https://t.me/DecredAgg) in Telegram that aims to collect news, press, videos, podcasts, Decred announcements, trending tweets and Reddit posts, as well as market stats.
 
 @anshawblack is planning a podcast.
 
-[Decred page](https://en.wikipedia.org/wiki/Decred) on Wikipedia was deleted. On Jan 8 user R2d232h2 [removed](https://en.wikipedia.org/w/index.php?title=Decred&diff=prev&oldid=877407037) a bunch of "bad sources". On Jan 10 the same user [vandalized](https://en.wikipedia.org/w/index.php?title=Decred&diff=next&oldid=877407037) the page by removing a large and important part of content. Just 4 hours later another user nominated Decred page for deletion - the [3rd attempt](https://en.wikipedia.org/wiki/Wikipedia:Articles_for_deletion/Decred_%283rd_nomination%29) to take it down. On Jan 11 the second purge was reverted and R2d232h2 was banned as sockpuppet, but next day the removal was applied again. As it stands after the cutting, the page is very small and has all [votes](https://en.wikipedia.org/wiki/Wikipedia:Articles_for_deletion/Decred_%283rd_nomination%29) to delete it. All suggested recent articles in major crypto media are [not good enough](https://en.wikipedia.org/wiki/Talk:Decred#Request_edit_on_12_January_2019) references. For background, the author of [2nd nomination](https://en.wikipedia.org/wiki/Wikipedia:Articles_for_deletion/Decred_%282nd_nomination%29) for deletion had interesting [views](https://archive.today/QAlRp) on notability of articles and was [banned](https://en.wikipedia.org/wiki/User:Prince_of_Thieves) as a sockpuppet. Extensively discussed [in #marketing](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$1547202592212vKSyw:decred.org) ([continued](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$15472392171087ucpIb:decred.org)), including possilble solutions. On Jan 18 the page was deleted and removed from List of cryptocurrencies that contains more notable entries. More details are captured in [this issue](https://github.com/xaur/decred-issues/issues/79).
+[Decred page](https://en.wikipedia.org/wiki/Decred) on Wikipedia was deleted. On Jan 8 a user [removed](https://archive.today/ApV3P) a bunch of "bad sources". On Jan 10 the same user vandalized the page by removing a large and important part of content. Just 4 hours later another user nominated Decred page for deletion - the [3rd attempt](https://en.wikipedia.org/wiki/Wikipedia:Articles_for_deletion/Decred_%283rd_nomination%29) to take it down. On Jan 11 content removal was reverted and its author was banned as sockpuppet, but next day the removal was [applied again](https://archive.today/fZUHW) by another user without much commentary. After the cutting the page became very small and all reviewers [voted](https://en.wikipedia.org/wiki/Wikipedia:Articles_for_deletion/Decred_%283rd_nomination%29) to delete it. All suggested recent articles in major crypto media were deemed [not good enough](https://archive.today/4xwaN) references. For background, the author of [2nd nomination](https://en.wikipedia.org/wiki/Wikipedia:Articles_for_deletion/Decred_%282nd_nomination%29) for deletion had interesting [views](https://archive.today/QAlRp) on notability of articles and was [banned](https://en.wikipedia.org/wiki/User:Prince_of_Thieves) as a sockpuppet. On Jan 18 the page was deleted and removed from [List of cryptocurrencies](https://en.wikipedia.org/wiki/List_of_cryptocurrencies) that was left with more notable coins. Details and links to discussions are captured in [this issue](https://github.com/xaur/decred-issues/issues/79). Experienced Wikipedia editors are welcome to help.
 
+Selected articles:
 
-{community efforts: Decred Assembly, websites, etc}
-
-{ratings news}
-
-Articles:
-
-* Understanding Decred Governance ([in Chinese](https://mp.weixin.qq.com/s/z3hzILiPBsLJR72Q2tP7TQ) at qq.com, [Google translation](https://translate.google.com/translate?sl=auto&tl=en&hl=en&u=https%3A%2F%2Fmp.weixin.qq.com%2Fs%2Fz3hzILiPBsLJR72Q2tP7TQ), _missed in Dec issue_) by "Dr Bitcoin"
-* https://www.coindesk.com/how-to-last-the-crypto-winter-seek-simplicity-manage-complexity (notably, the tagline was collectively brainstormed in #marketing)
-* https://bithub.pl/wywiady/decred-wywiad-z-community-managerem/ {en title please}
-* https://cryptoinsider.com/decred-dcr-prioritizes-blockchain-based-governance-and-decentralized-decision-making/ {worthy?}
-* https://www.linkedin.com/pulse/funadamental-analysis-decred-dcr-piotr-arendarski-ph-d {worthy?}
-* https://www.coinbureau.com/analysis/best-decred-wallets/
-* https://www.forbes.com/sites/leslieankney/2019/01/11/who-should-hold-power-decred-governance-and-what-it-means-for-investors/
-* https://medium.com/decred/decred-independent-contractor-roadmap-884faba3db39
-* https://mp.weixin.qq.com/s/_-lY0rtWSPiyLPZeTRR7gg (Chinese, {good?} by yinguochao})
-* Blockchain Project Review: Decred:8.4 Autonomous Digital Currency by Evaluape ([medium](https://medium.com/@EVALUAPE1/blockchain-project-review-decred-8-4-autonomous-digital-currency-323771d65529)) - Decred rated 8.4
-* Decred coin review: Replacing BTC? (Dutch, [bitcoinsaltcoins.nl](https://www.bitcoinsaltcoins.nl/decred-coin-review-vervanger-van-btc/)) - Decred scored 8.8.
-* https://bitsonline.com/consensus-mechanism-of-decred-decentralization/
-* 3 Cryptocurrencies to HODL During This Crypto Winter (Opinion) by Daniel Frumkin ([investinblockchain.com](https://www.investinblockchain.com/cryptocurrencies-hodl-during-crypto-winter/))
-* https://seekingalpha.com/article/4235521-fundamental-value-crypto-bitcoin-decred-store-value-investments
-* Binance info listed a new rating report([EN](https://info.binance.com/en/rate/detail/2506),[CN](https://info.binance.com/cn/rate/detail/2493)) of Decred by [Evaluape](https://www.evaluape.io/project/browse/54155/report)
-* The role of Decred voters in defending against majority attacks by @richardred ([medium](https://medium.com/@richardred/the-role-of-decred-voters-in-defending-against-majority-attacks-ec658af0a8fd))
-* https://blog.goodaudience.com/decentralized-off-chain-governance-in-the-context-of-digital-currencies-ef6db7d97412
-* https://medium.com/@artikozel/decred-infrastructure-interviews-stephen-founder-of-crypto-only-luxury-goods-marketplace-68d3214a4fd7
-* https://weeklyglobalresearch.wordpress.com/2019/01/31/decred-dcr-review/
-
-Above are most interesting articles, but more were published on the web. The [decred-media-tracker](https://github.com/RichardRed0x/decred-media-tracker) project is intended to track all articles.
+* {1230} Understanding Decred Governance by Dr. Bitcoin (Chinese, [qq.com](https://mp.weixin.qq.com/s/z3hzILiPBsLJR72Q2tP7TQ), [translation](https://translate.google.com/translate?sl=auto&tl=en&hl=en&u=https%3A%2F%2Fmp.weixin.qq.com%2Fs%2Fz3hzILiPBsLJR72Q2tP7TQ), _missed in Dec issue_)
+* {0101} Fundamental Analysis: Decred by Piotr Arendarski ([linkedin.com](https://www.linkedin.com/pulse/funadamental-analysis-decred-dcr-piotr-arendarski-ph-d))
+* {0103} How to Last the Crypto Winter? Seek Simplicity, Manage Complexity by @jy-p ([coindesk.com](https://www.coindesk.com/how-to-last-the-crypto-winter-seek-simplicity-manage-complexity), tagline was collectively brainstormed in #marketing)
+* {0103} Decred- an interview with the Community Manager @donmario by Janusz Zielinski ([bithub.pl](https://bithub.pl/wywiady/decred-wywiad-z-community-managerem/))
+* {0107} Best Decred Wallets: Top 6 Places to Store Your DCR by Steve Walters ([coinbureau.com](https://www.coinbureau.com/analysis/best-decred-wallets/), a rare case when authors were responsive and corrected all [reported issues](https://github.com/xaur/decred-issues/issues/68))
+* {0111} Who Should Hold Power? Decred Governance And What It Means For Investors by Leslie Ankney ([forbes.com](https://www.forbes.com/sites/leslieankney/2019/01/11/who-should-hold-power-decred-governance-and-what-it-means-for-investors/))
+* {0112} Decred Independent Contractor Roadmap for 2019 ([medium](https://medium.com/decred/decred-independent-contractor-roadmap-884faba3db39))
+* {0116} The Unique Consensus Mechanism of Decred–Is This True Decentralization? by Paul de Havilland ([bitsonline](https://bitsonline.com/consensus-mechanism-of-decred-decentralization/))
+* {0117} Decred as Store of Value, inspired by Forbes article by Yin Guochao (Chinese, [qq.com](https://mp.weixin.qq.com/s/_-lY0rtWSPiyLPZeTRR7gg), [translation](https://translate.google.com/translate?sl=auto&tl=en&hl=en&u=https%3A%2F%2Fmp.weixin.qq.com%2Fs%2F_-lY0rtWSPiyLPZeTRR7gg))
+* {0117} Blockchain Project Review: Decred: 8.4 Autonomous Digital Currency by Evaluape ([medium](https://medium.com/@EVALUAPE1/blockchain-project-review-decred-8-4-autonomous-digital-currency-323771d65529), Decred rated 8.4/10)
+* {0118} Decred coin review: Replacing BTC? by Edwin (Dutch, [bitcoinsaltcoins.nl](https://www.bitcoinsaltcoins.nl/decred-coin-review-vervanger-van-btc/), Decred scored 8.8/10)
+* {0121} 3 Cryptocurrencies to HODL During This Crypto Winter (Opinion) by Daniel Frumkin ([investinblockchain.com](https://www.investinblockchain.com/cryptocurrencies-hodl-during-crypto-winter/))
+* {0124} Fundamental Value In Crypto; Bitcoin And Decred As Store Of Value Investments by LCC Investment Research ([seekingalpha.com](https://seekingalpha.com/article/4235521-fundamental-value-crypto-bitcoin-decred-store-value-investments))
+* {0125} The role of Decred voters in defending against majority attacks by @richardred ([medium](https://medium.com/@richardred/the-role-of-decred-voters-in-defending-against-majority-attacks-ec658af0a8fd))
+* {0125} Decentralized off-chain governance in the context of digital currencies by @Haon ([goodaudience.com](https://blog.goodaudience.com/decentralized-off-chain-governance-in-the-context-of-digital-currencies-ef6db7d97412))
+* {0131} Decred Infrastructure Interviews: Stephen, founder of crypto-only luxury goods marketplace CryptoEmporium by @kozel ([medium](https://medium.com/@artikozel/decred-infrastructure-interviews-stephen-founder-of-crypto-only-luxury-goods-marketplace-68d3214a4fd7))
+* {0131} Decred Review by Lee Banfield ([weeklyglobalresearch.wordpress.com](https://weeklyglobalresearch.wordpress.com/2019/01/31/decred-dcr-review/))
 
 Translations:
 
 * [Detailed analysis of Decred fork resistance](https://medium.com/decred/detailed-analysis-of-decred-fork-resistance-93022e0bcde7) by @Haon - [in Russian](https://medium.com/decred-russia/%D0%B4%D0%B5%D1%82%D0%B0%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9-%D0%B0%D0%BD%D0%B0%D0%BB%D0%B8%D0%B7-%D1%83%D1%81%D1%82%D0%BE%D0%B9%D1%87%D0%B8%D0%B2%D0%BE%D1%81%D1%82%D0%B8-decred-%D0%BA-%D1%84%D0%BE%D1%80%D0%BA%D1%83-b30c78f764ea) by @DZ
+* Decred Journal - December 2018 [in Chinese](https://www.jianshu.com/p/65e7a83ac27c) by @guang, [in Polish](https://github.com/artikozel/DecredJournalPL/blob/master/journal/201812_DecredJournalPL.md) by @kozel, [in Portuguese](https://medium.com/@maiconjunge/jornal-decred-dezembro-de-2018-947c616b894f) by @maiconjunge, [in Russian](https://medium.com/decred-russia/decred-journal-%D0%B4%D0%B5%D0%BA%D0%B0%D0%B1%D1%80%D1%8C-2018-9528f7a9d24d) by @DZ and [in Spanish](https://medium.com/@decred_es/revista-decred-diciembre-2018-79093f957aac) by @elian. Wow. Thank you all for spreading the journal around the world! All translations are listed [here](https://xaur.github.io/decred-news/).
 
 Videos:
 
-* Why 2019 will be the biggest year for Decred by Hack Crypto - interview with @joshuam from TNABC https://www.youtube.com/watch?v=Kyihc6Uh4XA
-* Decred Realized Disputes in Blockchain Projects Were Inevitable: Joshua Buirski by Bitsonline from TNABC ([youtube](https://www.youtube.com/watch?v=CUxDxJ4YAUA), [bitsonline.com](https://bitsonline.com/decred-disputes-inevitable-buirski/))
-* Governance: Blockchain's Most Overlooked Pillar talk by @oregonisaac from Token Forum 2 conference ([tfblock.io](https://www.tfblock.io/post/governance-blockchain-s-most-overlooked-pillar))
+* Applications of Blockchain Time-Stamping - talk by @jy-p from TNABC ([youtube](https://www.youtube.com/watch?v=3RRTidXh_Lw))
+* Interviews from TNABC: [with @joshuam](https://www.youtube.com/watch?v=Kyihc6Uh4XA) by Hack Crypto, [with @joshuam](https://bitsonline.com/decred-disputes-inevitable-buirski/) by Bitsonline, [with @DZ](https://www.youtube.com/watch?v=h3bII-vjOsA), [with @jz](https://www.youtube.com/watch?v=4oKRVXGN6Fs) by CNBC Crypto Trader.
+* Governance: Blockchain's Most Overlooked Pillar - talk by @oregonisaac from Token Forum 2 ([tfblock.io](https://www.tfblock.io/post/governance-blockchain-s-most-overlooked-pillar))
 
 Audio:
 
-* https://badcryptopodcast.com/2019/01/08/autonomous-crypto-decred/
-* 51percent Crypto Research podcast: Noah Pierau and Tom Shaughnessy talk about blockchain governance in Decred, Bitcoin, Dash and Ethereum ([itunes](https://itunes.apple.com/us/podcast/noah-pierau-on-blockchain-governance-decred-bitcoin/id1438148082?i=1000428113722&mt=2))
-* How Decred Revolutionizes Funding in Crypto with Marco Peereboom ([evolvement.io](https://evolvement.io/how-decred-revolutionizes-funding-in-crypto-with-marco-peereboom/), with mirrors on soundcloud, youtube and more) - Michael Nye and Marco discuss current state of crypto, how Decred began, PoW vs PoS, Decred's funding model and more.
+* Taking A Deep Dive Into Autonomous Cryptocurrency With Decred - @moo31337 and @BAB talk how decentralized decision-making and self-funding have enabled Decred to build a robust, evolving digital currency, free from third party influence (The Crypto Chick Podcast with Rachel Wolfson, [badcryptopodcast.com](https://badcryptopodcast.com/2019/01/08/autonomous-crypto-decred/))
+* Noah Pierau on Blockchain Governance: Decred, Bitcoin, Dash, Ethereum (51percent Crypto Research by Tom Shaughnessy, [itunes](https://itunes.apple.com/us/podcast/noah-pierau-on-blockchain-governance-decred-bitcoin/id1438148082?i=1000428113722&mt=2))
+* How Decred Revolutionizes Funding in Crypto with Marco Peereboom - Michael Nye and Marco discuss current state of crypto, how Decred began, PoW vs PoS, Decred's funding model and more (Evolvement Podcast, [evolvement.io](https://evolvement.io/how-decred-revolutionizes-funding-in-crypto-with-marco-peereboom/))
 
 ## Community Discussions
 
