--- a/journal/201901.md
+++ b/journal/201901.md
@@ -210,23 +210,23 @@ Portuguese podcasts [started](https://matrix.to/#/!kdpEDksmOMNrlMqffD:decred.org
 
 Selected articles:
 
-* {1230} Understanding Decred Governance by Dr. Bitcoin (Chinese, [qq.com](https://mp.weixin.qq.com/s/z3hzILiPBsLJR72Q2tP7TQ), [translation](https://translate.google.com/translate?sl=auto&tl=en&hl=en&u=https%3A%2F%2Fmp.weixin.qq.com%2Fs%2Fz3hzILiPBsLJR72Q2tP7TQ), _missed in Dec issue_)
-* {0101} Fundamental Analysis: Decred by Piotr Arendarski ([linkedin.com](https://www.linkedin.com/pulse/funadamental-analysis-decred-dcr-piotr-arendarski-ph-d))
-* {0103} How to Last the Crypto Winter? Seek Simplicity, Manage Complexity by @jy-p ([coindesk.com](https://www.coindesk.com/how-to-last-the-crypto-winter-seek-simplicity-manage-complexity), tagline was collectively brainstormed in #marketing)
-* {0103} Decred- an interview with the Community Manager @donmario by Janusz Zielinski ([bithub.pl](https://bithub.pl/wywiady/decred-wywiad-z-community-managerem/))
-* {0107} Best Decred Wallets: Top 6 Places to Store Your DCR by Steve Walters ([coinbureau.com](https://www.coinbureau.com/analysis/best-decred-wallets/), a rare case when authors were responsive and corrected all [reported issues](https://github.com/xaur/decred-issues/issues/68))
-* {0111} Who Should Hold Power? Decred Governance And What It Means For Investors by Leslie Ankney ([forbes.com](https://www.forbes.com/sites/leslieankney/2019/01/11/who-should-hold-power-decred-governance-and-what-it-means-for-investors/))
-* {0112} Decred Independent Contractor Roadmap for 2019 ([medium](https://medium.com/decred/decred-independent-contractor-roadmap-884faba3db39))
-* {0116} The Unique Consensus Mechanism of Decred–Is This True Decentralization? by Paul de Havilland ([bitsonline](https://bitsonline.com/consensus-mechanism-of-decred-decentralization/))
-* {0117} Decred as Store of Value, inspired by Forbes article by Yin Guochao (Chinese, [qq.com](https://mp.weixin.qq.com/s/_-lY0rtWSPiyLPZeTRR7gg), [translation](https://translate.google.com/translate?sl=auto&tl=en&hl=en&u=https%3A%2F%2Fmp.weixin.qq.com%2Fs%2F_-lY0rtWSPiyLPZeTRR7gg))
-* {0117} Blockchain Project Review: Decred: 8.4 Autonomous Digital Currency by Evaluape ([medium](https://medium.com/@EVALUAPE1/blockchain-project-review-decred-8-4-autonomous-digital-currency-323771d65529), Decred rated 8.4/10)
-* {0118} Decred coin review: Replacing BTC? by Edwin (Dutch, [bitcoinsaltcoins.nl](https://www.bitcoinsaltcoins.nl/decred-coin-review-vervanger-van-btc/), Decred scored 8.8/10)
-* {0121} 3 Cryptocurrencies to HODL During This Crypto Winter (Opinion) by Daniel Frumkin ([investinblockchain.com](https://www.investinblockchain.com/cryptocurrencies-hodl-during-crypto-winter/))
-* {0124} Fundamental Value In Crypto; Bitcoin And Decred As Store Of Value Investments by LCC Investment Research ([seekingalpha.com](https://seekingalpha.com/article/4235521-fundamental-value-crypto-bitcoin-decred-store-value-investments))
-* {0125} The role of Decred voters in defending against majority attacks by @richardred ([medium](https://medium.com/@richardred/the-role-of-decred-voters-in-defending-against-majority-attacks-ec658af0a8fd))
-* {0125} Decentralized off-chain governance in the context of digital currencies by @Haon ([goodaudience.com](https://blog.goodaudience.com/decentralized-off-chain-governance-in-the-context-of-digital-currencies-ef6db7d97412))
-* {0131} Decred Infrastructure Interviews: Stephen, founder of crypto-only luxury goods marketplace CryptoEmporium by @kozel ([medium](https://medium.com/@artikozel/decred-infrastructure-interviews-stephen-founder-of-crypto-only-luxury-goods-marketplace-68d3214a4fd7))
-* {0131} Decred Review by Lee Banfield ([weeklyglobalresearch.wordpress.com](https://weeklyglobalresearch.wordpress.com/2019/01/31/decred-dcr-review/))
+* Understanding Decred Governance by Dr. Bitcoin (Chinese, [qq.com](https://mp.weixin.qq.com/s/z3hzILiPBsLJR72Q2tP7TQ), [translation](https://translate.google.com/translate?sl=auto&tl=en&hl=en&u=https%3A%2F%2Fmp.weixin.qq.com%2Fs%2Fz3hzILiPBsLJR72Q2tP7TQ), _missed in Dec issue_)
+* Fundamental Analysis: Decred by Piotr Arendarski ([linkedin.com](https://www.linkedin.com/pulse/funadamental-analysis-decred-dcr-piotr-arendarski-ph-d))
+* How to Last the Crypto Winter? Seek Simplicity, Manage Complexity by @jy-p ([coindesk.com](https://www.coindesk.com/how-to-last-the-crypto-winter-seek-simplicity-manage-complexity), tagline was collectively brainstormed in #marketing)
+* Decred- an interview with the Community Manager @donmario by Janusz Zielinski ([bithub.pl](https://bithub.pl/wywiady/decred-wywiad-z-community-managerem/))
+* Best Decred Wallets: Top 6 Places to Store Your DCR by Steve Walters ([coinbureau.com](https://www.coinbureau.com/analysis/best-decred-wallets/), a rare case when authors were responsive and corrected all [reported issues](https://github.com/xaur/decred-issues/issues/68))
+* Who Should Hold Power? Decred Governance And What It Means For Investors by Leslie Ankney ([forbes.com](https://www.forbes.com/sites/leslieankney/2019/01/11/who-should-hold-power-decred-governance-and-what-it-means-for-investors/))
+* Decred Independent Contractor Roadmap for 2019 ([medium](https://medium.com/decred/decred-independent-contractor-roadmap-884faba3db39))
+* The Unique Consensus Mechanism of Decred–Is This True Decentralization? by Paul de Havilland ([bitsonline](https://bitsonline.com/consensus-mechanism-of-decred-decentralization/))
+* Decred as Store of Value, inspired by Forbes article by Yin Guochao (Chinese, [qq.com](https://mp.weixin.qq.com/s/_-lY0rtWSPiyLPZeTRR7gg), [translation](https://translate.google.com/translate?sl=auto&tl=en&hl=en&u=https%3A%2F%2Fmp.weixin.qq.com%2Fs%2F_-lY0rtWSPiyLPZeTRR7gg))
+* Blockchain Project Review: Decred: 8.4 Autonomous Digital Currency by Evaluape ([medium](https://medium.com/@EVALUAPE1/blockchain-project-review-decred-8-4-autonomous-digital-currency-323771d65529), Decred rated 8.4/10)
+* Decred coin review: Replacing BTC? by Edwin (Dutch, [bitcoinsaltcoins.nl](https://www.bitcoinsaltcoins.nl/decred-coin-review-vervanger-van-btc/), Decred scored 8.8/10)
+* 3 Cryptocurrencies to HODL During This Crypto Winter (Opinion) by Daniel Frumkin ([investinblockchain.com](https://www.investinblockchain.com/cryptocurrencies-hodl-during-crypto-winter/))
+* Fundamental Value In Crypto; Bitcoin And Decred As Store Of Value Investments by LCC Investment Research ([seekingalpha.com](https://seekingalpha.com/article/4235521-fundamental-value-crypto-bitcoin-decred-store-value-investments))
+* The role of Decred voters in defending against majority attacks by @richardred ([medium](https://medium.com/@richardred/the-role-of-decred-voters-in-defending-against-majority-attacks-ec658af0a8fd))
+* Decentralized off-chain governance in the context of digital currencies by @Haon ([goodaudience.com](https://blog.goodaudience.com/decentralized-off-chain-governance-in-the-context-of-digital-currencies-ef6db7d97412))
+* Decred Infrastructure Interviews: Stephen, founder of crypto-only luxury goods marketplace CryptoEmporium by @kozel ([medium](https://medium.com/@artikozel/decred-infrastructure-interviews-stephen-founder-of-crypto-only-luxury-goods-marketplace-68d3214a4fd7))
+* Decred Review by Lee Banfield ([weeklyglobalresearch.wordpress.com](https://weeklyglobalresearch.wordpress.com/2019/01/31/decred-dcr-review/))
 
 Translations:
 
